kompose-manyfiest/celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: celery
  name: celery
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: celery
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: celery
    spec:
      containers:
        - args:
            - celery
            - -A
            - backend
            - worker
            - -l
            - INFO
          image: celery
          name: celery
          resources: {}
          volumeMounts:
            - mountPath: /app
              name: celery-claim0
      restartPolicy: Always
      volumes:
        - name: celery-claim0
          persistentVolumeClaim:
            claimName: celery-claim0
status: {}
