kompose-manyfiest/channels-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: channels
  name: channels
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: channels
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: channels
    spec:
      containers:
        - args:
            - daphne
            - -b
            - 0.0.0.0
            - -p
            - "8001"
            - backend.asgi:application
          image: channels
          name: channels
          ports:
            - containerPort: 8001
          resources: {}
          volumeMounts:
            - mountPath: /app
              name: channels-claim0
      restartPolicy: Always
      volumes:
        - name: channels-claim0
          persistentVolumeClaim:
            claimName: channels-claim0
status: {}
