kompose-manyfiest/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: MONGO_INITDB_DATABASE
              value: myonorall
            - name: MONGO_INITDB_PASSWORD
              value: onorall
            - name: MONGO_INITDB_ROOT_PASSWORD
              value: onorall
            - name: MONGO_INITDB_ROOT_USERNAME
              value: amitsingh
            - name: MONGO_INITDB_USERNAME
              value: amitsingh
          image: mongo
          name: mongo-db-container
          ports:
            - containerPort: 27017
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mongodb/data
              name: db-claim0
      restartPolicy: Always
      volumes:
        - name: db-claim0
          persistentVolumeClaim:
            claimName: db-claim0
status: {}
