kompose-manyfiest/redis-websocket-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: redis-websocket
  name: redis-websocket
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis-websocket
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/nw_backends: "true"
        io.kompose.service: redis-websocket
    spec:
      containers:
        - args:
            - redis-server
          image: redis:alpine
          name: redis_websocket
          ports:
            - containerPort: 6379
          resources: {}
      restartPolicy: Always
status: {}
