kompose-manyfiest/nw_backends-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: nw_backends
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/nw_backends: "true"
  podSelector:
    matchLabels:
      io.kompose.network/nw_backends: "true"
